cluster/apps/networking/traefik/hass/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hass-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass.${SECRET_DOMAIN}`)
      kind: Rule
      priority: 1
      services:
        - name: hass-service
          port: 8123
  tls:
    secretName: certsecret
